--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <nav>
       <ul>
-        <li><a href ="#">About</a></li>
-        <li><a href ="#">Blog</a></li>
-        <li><a href ="#">Contact</a></li>
-        <li><a href ="#">Work</a></li>
+        <li><a href ="#About">About></a></li>
+        <li><a href ="#Blog">Blog</a></li>
+        <li><a href ="#Contact">Contact</a></li>
+        <li><a href ="#Work">Work</a></li>
       </ul>
     </nav>
     
@@ -26,12 +26,37 @@
     
     <!-- social media links -->
     <section class="icons">
-      <div><img src="#"></div>
-      <div><img src="#"></div>
-      <div><img src="#"></div>
-      <div><img src="#"></div>
+      <div><img src="imgs/email-black.png"></div>
+      <div><img src="imgs/googleplus-black.png"></div>
+      <div><img src="imgs/linkedin-black.png"></div>
+      <div><img src="imgs/instagram-black.png"></div>
     </section>
   </div>
+
+  <div > <img src="imgs/side_1.png" class="background"> </div>
+
+  <div class="below" id="page1">
+      <a id="About"></a>
+        <p> about page contet goes here </p>
+  </div>
+
+
+  <div class="below" id="page2">
+      <a id="Blog"></a>
+        <p>Blog Content goes here </p>
+  </div>
+
+  <div class="below" id="page3">
+      <a id="Contact"></a>
+        <p>contact Content goes here </p>
+  </div>
+
+  <div class="below" id="page4">
+      <a id="Work"></a>
+        <p>work Content goes here </p>
+  </div>
+
+
 
 
 <!--
