Break up big stylesheet

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
  <title> Home </title> 
  <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
  <link rel="stylesheet" type="text/css" href="stylesheets/indexstyle.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/nav.css">
 </head>
   <body>
 
     <nav>
       <ul>
-        <li><a href ="#About">About></a></li>
+        <li><a href ="#About">About</a></li>
         <li><a href ="#Blog">Blog</a></li>
         <li><a href ="#Contact">Contact</a></li>
         <li><a href ="#Work">Work</a></li>
@@ -33,7 +34,7 @@
     </section>
   </div>
 
-  <div > <img src="imgs/side_1.png" class="background"> </div>
+  <div > <img src="imgs/side_2.png" class="background"> </div>
 
   <div class="below" id="page1">
       <a id="About"></a>
