--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html>
 <head>
  <title> Home </title> 
+ <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
  <link rel="stylesheet" type="text/css" href="stylesheets/indexstyle.css">
-  <link rel="stylesheet" type="text/css" href="stylesheets/nav.css">
+ <link rel="stylesheet" type="text/css" href="stylesheets/nav.css">
+
 </head>
   <body>
 
     <nav>
       <ul>
         <li><a href ="#About">About</a></li>
-        <li><a href ="#Blog">Blog</a></li>
+        <li><a href ="pages/blog.html">Blog</a></li>
         <li><a href ="#Contact">Contact</a></li>
         <li><a href ="#Work">Work</a></li>
       </ul>
     </nav>
+
+
     
     <div class="content">
     <section class="blurb">
@@ -34,28 +38,8 @@
     </section>
   </div>
 
+
   <div > <img src="imgs/side_2.png" class="background"> </div>
-
-  <div class="below" id="page1">
-      <a id="About"></a>
-        <p> about page contet goes here </p>
-  </div>
-
-
-  <div class="below" id="page2">
-      <a id="Blog"></a>
-        <p>Blog Content goes here </p>
-  </div>
-
-  <div class="below" id="page3">
-      <a id="Contact"></a>
-        <p>contact Content goes here </p>
-  </div>
-
-  <div class="below" id="page4">
-      <a id="Work"></a>
-        <p>work Content goes here </p>
-  </div>
 
 
 
