Make some links work

--- a/imgs/Home.html
+++ b/imgs/Home.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
+<!-- saved from url=(0070)file:///home/dextermoran/Desktop/dextermoran.github.io/pages/blog.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <title> Home </title> 
  <meta charset="UTF-8">
- <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
- <link rel="stylesheet" type="text/css" href="../stylesheets/blogstyle.css">
- <link rel="stylesheet" type="text/css" href="../stylesheets/nav.css">
+ <link rel="stylesheet" type="text/css" href="./Home_files/default.css">
+ <link rel="stylesheet" type="text/css" href="./Home_files/blogstyle.css">
+ <link rel="stylesheet" type="text/css" href="./Home_files/nav.css">
 
 </head>
   <body>
 
     <nav>
       <ul>
-        <li><a href ="about.html">About</a></li>
-        <li><a href ="#">Blog</a></li>
-        <li><a href ="contact.html">Contact</a></li>
-        <li><a href ="work.html">Work</a></li>
+        <li><a href="file:///home/dextermoran/Desktop/dextermoran.github.io/pages/about.html">About</a></li>
+        <li><a href="file:///home/dextermoran/Desktop/dextermoran.github.io/pages/blog.html#">Blog</a></li>
+        <li><a href="file:///home/dextermoran/Desktop/dextermoran.github.io/pages/contact.html">Contact</a></li>
+        <li><a href="file:///home/dextermoran/Desktop/dextermoran.github.io/pages/work.html">Work</a></li>
       </ul>
     </nav>
 
@@ -67,10 +67,10 @@
 
 
   
-  </div>
+  </section></div>
 
 
-  <div > <img src="../imgs/laptop.jpg" class="background"> </div>
+  <div> <img src="./Home_files/laptop.jpg" class="background"> </div>
 
 
 
@@ -82,5 +82,5 @@
     </footer>
 -->
 
-  </body>
-</html>
+  
+</body></html>
