add a blog post

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -25,7 +25,7 @@
     <section class="blurb">
 
       <div class="postTitle">
-        <h3>Second Blog Post! Something else!</h3> 
+        <h3>Second Blog Post! Classes and Ids!</h3> 
            <!-- <section class="icons">
               <div><img src="../imgs/email-black.png"></div>
               <div><img src="../imgs/googleplus-black.png"></div>
@@ -36,10 +36,9 @@
 
       <div class="postContent">
         <p>     
-          Hi Internet! There’s this cool thing called git that is a method of version control that lets you keep track of different versions of your work. No more Project_finial_revision_2_final.jpg anymore! Git creates an archive file of your work at it’s various stages. This means that if you ever want to revert to a previous version of your file you can pull up a log of your commits, review the messages you left as you changed things, and revert to any of your save points by using the number associated with it. Additionally, git allows you to create branches of your projects to work on. This is super cool because it lets you work on new features while keeping the master branch of your project stable and unchanged until your new feature is ready to be merged in. 
-        </p>
-        <p>      git commi
-          The real icing on the cake though is that git can be paired with a web service called GitHub that keeps your repository in the cloud. This lets you not only keep your work backed up, but lets you share your code with others and work collaboratively on a project. This is super important to remember because all the best things get build with others.
+          Classes and Ids are a method of applying styling to specific elements of of an html document. While they they function in very nearly the same way there is one big difference, IDs are unique. It is bad practice to use an ID more than once in a file, in fact, your code won’t pass validation if an id is reused. For any purpose where styling needs to be applied to multiple elements one should use a class. One way to remember this really key difference is to think of classes as barcodes and id’s as serial numbers. Every Ipod in an apple store has a bar code, but serial numbers are unique to each specific ipod.
+        <p> 
+          So, in short, if you want to style more than one element at a time you should use a class, and if you want to style one single element use an Id!        </p>
         </p>
      </div>
 
