add name to nav bar

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -16,14 +16,13 @@
         <li><a href ="#">Blog</a></li>
         <li><a href ="contact.html">Contact</a></li>
         <li><a href ="work.html">Work</a></li>
+        <li><a id="logo" href="../index.html">Dexter Moran</a></li>
       </ul>
     </nav>
 
 
     
   <div class="content">
-    <section class="blurb">
-
       <div class="postTitle">
         <h3>Second Blog Post! Classes and Ids!</h3> 
            <!-- <section class="icons">
@@ -61,6 +60,7 @@
           The real icing on the cake though is that git can be paired with a web service called GitHub that keeps your repository in the cloud. This lets you not only keep your work backed up, but lets you share your code with others and work collaboratively on a project. This is super important to remember because all the best things get build with others.
         </p>
      </div>
+  </div>
 
 
 
