--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li><a href ="pages/blog.html">Blog</a></li>
         <li><a href ="#Contact">Contact</a></li>
         <li><a href ="#Work">Work</a></li>
+        <li><a id="logo" href="../index.html">Dexter Moran</a></li>
+
       </ul>
     </nav>
 
