--- a/pages/about.html
+++ b/pages/about.html
@@ -16,6 +16,7 @@
         <li><a href ="blog.html">Blog</a></li>
         <li><a href ="contact.html">Contact</a></li>
         <li><a href ="work.html">Work</a></li>
+        <li><a id="logo" href="../index.html">Dexter Moran</a></li>
       </ul>
     </nav>
 
