add stylesheets and placeholders for the rest of the pages.

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     
     <!-- social media links -->
     <section class="icons">
-      <div><img src="imgs/email-black.png"></div>
-      <div><img src="imgs/googleplus-black.png"></div>
-      <div><img src="imgs/linkedin-black.png"></div>
-      <div><img src="imgs/instagram-black.png"></div>
+      <div> <a href="mailto: dextermoran@gmail.com"> <img src="imgs/email-black.png"> </a> </div>
+      <div> <a href="https://github.com/dextermoran"> <img src="imgs/googleplus-black.png"> </a> </div>
+      <div> <a href="https://www.linkedin.com/in/dexter-moran-b42113114"> <img src="imgs/linkedin-black.png"> </a> </div>
+      <div> <a href="https://www.instagram.com/dexter_moran/"> <img src="imgs/instagram-black.png"> </a> </div>
     </section>
   </div>
 
