--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
  <title> Home </title> 
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
- <link rel="stylesheet" type="text/css" href="../stylesheets/blogstyle.css">
+ <link rel="stylesheet" type="text/css" href="../stylesheets/contactstyle.css">
  <link rel="stylesheet" type="text/css" href="../stylesheets/nav.css">
 
 </head>
@@ -22,14 +22,7 @@
 
     
   <div class="content">
-    <section class="blurb">
-
-     
-<p> this will be where you get in touch with me </p>
-
-
-
-  
+    <p> this will be where you get in touch with me </p>
   </div>
 
 
