--- a/pages/work.html
+++ b/pages/work.html
@@ -4,7 +4,7 @@
  <title> Home </title> 
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
- <link rel="stylesheet" type="text/css" href="../stylesheets/blogstyle.css">
+ <link rel="stylesheet" type="text/css" href="../stylesheets/workstyle.css">
  <link rel="stylesheet" type="text/css" href="../stylesheets/nav.css">
 
 </head>
@@ -22,18 +22,11 @@
 
     
   <div class="content">
-    <section class="blurb">
-
-     
         <p> Soon you'll be able to see my porfolio here </p>
-
-
-
-  
   </div>
 
 
-  <div > <img src="../imgs/laptop.jpg" class="background"> </div>
+  <!--<div > <img src="../imgs/laptop.jpg" class="background"> </div> -->
 
 
 
