--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
  <title> Home </title> 
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
- <link rel="stylesheet" type="text/css" href="../stylesheets/blogstyle.css">
+ <link rel="stylesheet" type="text/css" href="../stylesheets/aboutstyle.css">
  <link rel="stylesheet" type="text/css" href="../stylesheets/nav.css">
 
 </head>
@@ -22,18 +22,11 @@
 
     
   <div class="content">
-    <section class="blurb">
-
      <p> This page tells you how cool i am. </p>
-
-
-
-
-  
   </div>
 
 
-  <div > <img src="../imgs/headshot.jpg" class="background"> </div>
+ <!--  <div > <img src="../imgs/headshot.jpg" class="background"> </div> -->
 
 
 
