--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,8 +27,7 @@
   </div>
 
 
-  <div > <img src="../imgs/laptop.jpg" class="background"> </div>
-
+  <!-- <div > <img src="../imgs/laptop.jpg" class="background"> </div> -->
 
 
 
