--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,7 +20,29 @@
       </ul>
     </nav>
 
+  <div class="content">
+      <div class="postTitle">
+        <h3>Arrays and Hashes!</h3> 
+           <!-- <section class="icons">
+              <div><img src="../imgs/email-black.png"></div>
+              <div><img src="../imgs/googleplus-black.png"></div>
+              <div><img src="../imgs/linkedin-black.png"></div>
+              <div><img src="../imgs/instagram-black.png"></div>
+            </section> -->
+      </div>
 
+      <div class="postContent">
+        <p>At the core of it, arrays and hashes are very similar. Both are structures for storing a collection of items, 
+        regardless of what type of variable they are. The key difference is that arrays store items through an indexing 
+        system, In order to retrieve an item one uses the number bound to it’s position in the array to access it. Hashes,
+        on the other hand, store items with a keyword system. This means that to retrieve an item one only needs to know the 
+        keyword that the item was stored with. </p>
+        
+        <p>This potentially easier means of access in a hash can frequently be a positive, one doesn’t need to remember 
+        specific numbers to find an item and could potentially use the keyword as an additional means clarifying the 
+        information stored in the hash. This approach is certainly more human friendly seeing as it allows us to interact 
+        with data structures in our natural language.  </p>
+     </div>
     
   <div class="content">
       <div class="postTitle">
