add contact page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <nav>
       <ul>
-        <li><a href ="#About">About</a></li>
+        <li><a href ="pages/about.html">About</a></li>
         <li><a href ="pages/blog.html">Blog</a></li>
-        <li><a href ="#Contact">Contact</a></li>
-        <li><a href ="#Work">Work</a></li>
+        <li><a href ="pages/contact.html">Contact</a></li>
+        <li><a href ="pages/work.html">Work</a></li>
         <li><a id="logo" href="../index.html">Dexter Moran</a></li>
 
       </ul>
