--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,11 +23,22 @@
 
     
   <div class="content">
-    <p> this will be where you get in touch with me </p>
+
+    <p> Now that you've seen my super cool portfolio, If you'd be interested in working with me feel free to get in touch! I can be reached via email at <a href="mailto:dextermoran@gmail.com">Dextermoran@gmail.com.</a> I'm also accesible on a variety of social media</p>
+
+  <section class="icons">
+      <div> <a href="mailto: dextermoran@gmail.com"> <img src="../imgs/email-black.png"> </a> </div>
+      <div> <a href="https://github.com/dextermoran"> <img src="../imgs/googleplus-black.png"> </a> </div>
+      <div> <a href="https://www.linkedin.com/in/dexter-moran-b42113114"> <img src="../imgs/linkedin-black.png"> </a> </div>
+      <div> <a href="https://www.instagram.com/dexter_moran/"> <img src="../imgs/instagram-black.png"> </a> </div>
+  </section>
+
   </div>
 
 
-  <!-- <div > <img src="../imgs/laptop.jpg" class="background"> </div> -->
+
+
+  <div > <img src="../imgs/photo5.jpg" class="background"> </div>
 
 
 
