--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,7 +24,16 @@
     
   <div class="content">
 
-    <p> Now that you've seen my super cool portfolio, If you'd be interested in working with me feel free to get in touch! I can be reached via email at <a href="mailto:dextermoran@gmail.com">Dextermoran@gmail.com.</a> I'm also accesible on a variety of social media</p>
+    <p> Now that you've seen my super cool portfolio, If you'd be interested in working
+    with me feel free to get in touch! I can be reached via email at 
+    <a href="mailto:dextermoran@gmail.com">Dextermoran@gmail.com.</a> I'm also accesible 
+    on a variety of social media</p>
+
+    <form class="emailme" action="http://formspree.io/you@email.com">
+      <input class="userInput" type="email" name="_replyto">
+      <textarea class="userInput" name="body"></textarea>
+      <input class="userInput" type="submit" value="Send">
+    </form>
 
   <section class="icons">
       <div> <a href="mailto: dextermoran@gmail.com"> <img src="../imgs/email-black.png"> </a> </div>
