--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,7 +29,7 @@
     <a href="mailto:dextermoran@gmail.com">Dextermoran@gmail.com.</a> I'm also accesible 
     on a variety of social media</p>
 
-    <form class="emailme" action="http://formspree.io/you@email.com">
+    <form class="emailme" action="http://formspree.io/dextermoran@gmail.com">
       <input class="userInput" type="email" name="_replyto">
       <textarea class="userInput" name="body"></textarea>
       <input class="userInput" type="submit" value="Send">
