adding more css changes

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,7 +32,7 @@
     <form class="emailme" action="http://formspree.io/dextermoran@gmail.com">
       <input class="userInput" type="email" name="_replyto">
       <textarea class="userInput" name="body"></textarea>
-      <input class="userInput" type="submit" value="Send">
+      <input id="userSend" type="submit" value="Send">
     </form>
 
   <section class="icons">
