--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,8 +30,8 @@
     on a variety of social media</p>
 
     <form class="emailme" action="http://formspree.io/dextermoran@gmail.com">
-      <input class="userInput" type="email" name="_replyto">
-      <textarea class="userInput" name="body"></textarea>
+      <input class="userInput" type="email" name="_replyto" placeholder="Who are you?">
+      <textarea class="userInput" name="body" placeholder="What's on your mind?"></textarea>
       <input id="userSend" type="submit" value="Send">
     </form>
 
