make formspring changes

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,7 +29,7 @@
     <a href="mailto:dextermoran@gmail.com">Dextermoran@gmail.com.</a> I'm also accesible 
     on a variety of social media</p>
 
-    <form class="emailme" action="http://formspree.io/dextermoran@gmail.com">
+    <form class="emailme" action="http://formspree.io/dextermoran@gmail.com" method="POST">
       <input class="userInput" type="email" name="_replyto" placeholder="Who are you?">
       <textarea class="userInput" name="body" placeholder="What's on your mind?"></textarea>
       <input id="userSend" type="submit" value="Send">
