--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,7 +30,7 @@
     on a variety of social media</p>
 
     <form class="emailme" action="http://formspree.io/dextermoran@gmail.com" method="POST">
-      <input class="userInput" type="email" name="_replyto" placeholder="Who are you?">
+      <input class="userInput" type="email" name="_replyto" placeholder="Your email">
       <textarea class="userInput" name="body" placeholder="What's on your mind?"></textarea>
       <input id="userSend" type="submit" value="Send">
     </form>
