add about page and style changes

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -120,7 +120,7 @@
   </div>
 
 
-  <div > <img src="../imgs/laptop.jpg" class="background"> </div>
+<!--  <div > <img src="../imgs/laptop.jpg" class="background"> </div> -->
 
 
 
