--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,7 +27,7 @@
     <p> Now that you've seen my super cool portfolio, If you'd be interested in working
     with me feel free to get in touch! I can be reached via email at 
     <a href="mailto:dextermoran@gmail.com">Dextermoran@gmail.com.</a> I'm also accesible 
-    on a variety of social media</p>
+    on a variety of social media.</p>
 
     <form class="emailme" action="http://formspree.io/dextermoran@gmail.com" method="POST">
       <input class="userInput" type="email" name="_replyto" placeholder="Your email">
@@ -47,7 +47,7 @@
 
 
 
-  <div > <img src="../imgs/photo5.jpg" class="background"> </div>
+ <!-- <div > <img src="../imgs/photo5.jpg" class="background"> </div> -->
 
 
 
