add week-7 website changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href ="pages/blog.html">Blog</a></li>
         <li><a href ="pages/contact.html">Contact</a></li>
         <li><a href ="pages/work.html">Work</a></li>
-        <li><a id="logo" href="../index.html">Dexter Moran</a></li>
+        <li id="logo"><a href="../index.html">Dexter Moran</a></li>
 
       </ul>
     </nav>
@@ -41,12 +41,13 @@
   </div>
 
 
-  <div > <img src="imgs/side_2.png" class="background"> </div>
+  <div class="background"> </div>
 
 
 
 
 <!--
+<img src="imgs/side_2.png">
     <footer>
       <p> Thanks for visiting</p>
       <a href="mailto:dextermoran@gmail.com"> dextermoran@gmail.com </a>
