--- a/pages/work.html
+++ b/pages/work.html
@@ -12,18 +12,29 @@
 
     <nav>
       <ul>
-        <li><a href ="#">About</a></li>
+        <li><a href ="about.html">About</a></li>
         <li><a href ="blog.html">Blog</a></li>
         <li><a href ="contact.html">Contact</a></li>
         <li><a href ="work.html">Work</a></li>
-        <li><a id="logo" href="../index.html">Dexter Moran</a></li>
+        <li id="logo"><a href="../index.html">Dexter Moran</a></li>
       </ul>
     </nav>
 
 
     
   <div class="content">
-        <p> Soon you'll be able to see my porfolio here </p>
+    <div class="row1">
+      <a href="muji.html"><div id="muji" class="projectThumbnail"></div></a>
+      <a href="bike.html"><div id="bike" class="projectThumbnail"></div></a>
+      <div class="projectThumbnail"></div>
+      <div class="projectThumbnail"></div>
+
+      <div class="projectThumbnail"></div>
+      <div class="projectThumbnail"></div>
+      <div class="projectThumbnail"></div>
+      <div class="projectThumbnail"></div>
+    </div>
+
   </div>
 
 
