--- a/pages/blog.html
+++ b/pages/blog.html
@@ -16,7 +16,7 @@
         <li><a href ="#">Blog</a></li>
         <li><a href ="contact.html">Contact</a></li>
         <li><a href ="work.html">Work</a></li>
-        <li><a id="logo" href="../index.html">Dexter Moran</a></li>
+        <li id="logo"><a href="../index.html">Dexter Moran</a></li>
       </ul>
     </nav>
 
