--- a/pages/work.html
+++ b/pages/work.html
@@ -26,7 +26,7 @@
     <div class="row1">
       <a href="muji.html"><div id="muji" class="projectThumbnail"></div></a>
       <a href="bike.html"><div id="bike" class="projectThumbnail"></div></a>
-      <div class="projectThumbnail"></div>
+      <a href="game.html"><div id="game" class="projectThumbnail"></div></a>
       <div class="projectThumbnail"></div>
 
       <div class="projectThumbnail"></div>
