--- a/pages/work.html
+++ b/pages/work.html
@@ -27,7 +27,7 @@
       <a href="muji.html"><div id="muji" class="projectThumbnail"></div></a>
       <a href="bike.html"><div id="bike" class="projectThumbnail"></div></a>
       <a href="game.html"><div id="game" class="projectThumbnail"></div></a>
-      <a href="cheat-sheet.html"><div class="projectThumbnail"><h4>JS Cheat Sheet</h4></div></a>
+      <a href="cheat-sheet.html"><div class="projectThumbnail"></div></a>
 
       <div class="projectThumbnail"></div>
       <div class="projectThumbnail"></div>
