add week 9 blog

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -26,6 +26,22 @@
 
   <div class="content">
     
+                      <div class="postTitle">
+        <h3>Deploying to a Digital Ocean Droplet</h3> 
+           <!-- <section class="icons">
+              <div><img src="../imgs/email-black.png"></div>
+              <div><img src="../imgs/googleplus-black.png"></div>
+              <div><img src="../imgs/linkedin-black.png"></div>
+              <div><img src="../imgs/instagram-black.png"></div>
+            </section> -->
+      </div>
+
+      <div class="postContent">
+        <p>THis week i spent some time setting up and deploying my site to a Digital Ocean droplet. The server runs ubuntu as an os and nginx to server my 
+        currently static pageds. I had a ton of fun learning how to configure nginx and trying to understand how it works. At the moment i am waiting for my 
+        domain name registrar to process the transfer of dextermoran.com from a squarespace page I used to maintain. </p>
+     </div>
+    
                   <div class="postTitle">
         <h3>Big O notation!</h3> 
            <!-- <section class="icons">
