--- a/pages/blog.html
+++ b/pages/blog.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="postContent">
-        <p>THis week i spent some time setting up and deploying my site to a Digital Ocean droplet. The server runs ubuntu as an os and nginx to server my 
+        <p>This week i spent some time setting up and deploying my site to a Digital Ocean droplet. The server runs ubuntu as an os and nginx to server my 
         currently static pageds. I had a ton of fun learning how to configure nginx and trying to understand how it works. At the moment i am waiting for my 
         domain name registrar to process the transfer of dextermoran.com from a squarespace page I used to maintain. </p>
      </div>
