--- a/pages/bike.html
+++ b/pages/bike.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title> Home </title> 
+ <title> Bike Project </title> 
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
  <link rel="stylesheet" type="text/css" href="../stylesheets/ProjectStyle.css">
@@ -23,8 +23,8 @@
 
     <section class="container">
 
-      <img class="images" src="../imgs/bike/bikeandgtr3.jpg" alt="">
       <img class="images" src="../imgs/bike/sketch page.jpg" alt="">
+      <img class="images" src="../imgs/bike/bikeandgtr3.jpg" alt="">
       <img class="images" src="../imgs/bike/Nissan_Bike.41.jpg" alt="">
       <img class="images" src="../imgs/bike/rearlights.45.jpg" alt="">
       <img class="images" src="../imgs/bike/aero analysis contours.jpg" alt="">
