--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title> Home </title> 
+ <title> Contact </title> 
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
  <link rel="stylesheet" type="text/css" href="../stylesheets/contactstyle.css">
@@ -43,20 +43,6 @@
   </section>
 
   </div>
-
-
-
-
- <!-- <div > <img src="../imgs/photo5.jpg" class="background"> </div> -->
-
-
-
-<!--
-    <footer>
-      <p> Thanks for visiting</p>
-      <a href="mailto:dextermoran@gmail.com"> dextermoran@gmail.com </a>
-    </footer>
--->
 
   </body>
 </html>
