--- a/pages/muji.html
+++ b/pages/muji.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title> Home </title> 
+ <title> Muji No Spill Detergent </title> 
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
  <link rel="stylesheet" type="text/css" href="../stylesheets/ProjectStyle.css">
