--- a/pages/work.html
+++ b/pages/work.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title> Home </title> 
+ <title> My Projects </title> 
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
  <link rel="stylesheet" type="text/css" href="../stylesheets/workstyle.css">
@@ -37,18 +37,6 @@
 
   </div>
 
-
-  <!--<div > <img src="../imgs/laptop.jpg" class="background"> </div> -->
-
-
-
-
-<!--
-    <footer>
-      <p> Thanks for visiting</p>
-      <a href="mailto:dextermoran@gmail.com"> dextermoran@gmail.com </a>
-    </footer>
--->
 
   </body>
 </html>
