--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title> Home </title> 
+ <title> About Me </title> 
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
  <link rel="stylesheet" type="text/css" href="../stylesheets/aboutstyle.css">
