--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title> Home </title> 
+ <title> Home </title>
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
  <link rel="stylesheet" type="text/css" href="stylesheets/indexstyle.css">
  <link rel="stylesheet" type="text/css" href="stylesheets/nav.css">
+ <script src="js/three.min.js"></script>
 
 </head>
   <body>
@@ -21,15 +22,17 @@
       </ul>
     </nav>
 
-    
+    <div id="threeD"> <script src="js/threeJsScript.js"> </script> </div>
+
     <div class="content">
+
     <section class="blurb">
       <h1>Dexter Moran</h1>
       <p>I'm a designer and developer passionate about building accessible, human scale products with meaningful outcomes.</p>
       <br>
       <p>Feel free to get in touch.</p>
     </section>
-    
+
     <!-- social media links -->
     <section class="icons">
       <div> <a href="mailto: dextermoran@gmail.com"> <img src="imgs/email-black.png"> </a> </div>
@@ -40,7 +43,9 @@
   </div>
 
 
-  <div class="background"> </div>
+
+
+  <!-- <div class="background"> </div> -->
 
 
 
